fix FAQ alignment off

--- a/src/pages/faq/Faq.css
+++ b/src/pages/faq/Faq.css
@@ -18,6 +18,11 @@
 
 .title {
   color: #3d6fa8;
+  padding: var(--chakra-space-2) 0px !important;
+}
+
+.content {
+  padding: var(--chakra-space-2) 0px !important;
 }
 
 .content-text {
